[gd_scene load_steps=9 format=2]

[ext_resource path="res://pckScenes/dummies/dummy2/Dummy2.gd" type="Script" id=1]
[ext_resource path="res://pckScenes/dummies/dummy2/dummy2.png" type="Texture" id=2]
[ext_resource path="res://assets/misc/light/light.png" type="Texture" id=3]
[ext_resource path="res://pckScenes/fx/FDmanager.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 48 )

[node name="Dummy" type="Area2D" groups=[
"dummy",
]]
script = ExtResource( 1 )

[node name="Texture" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="light" type="Light2D" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
color = Color( 1, 0, 0, 1 )
energy = 0.75
shadow_enabled = true

[node name="FDmanager" parent="." instance=ExtResource( 4 )]
position = Vector2( -8, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Dummy_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
